css/style.css
/* RESET */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'roboto', sans-serif;
}

/* css HEADER */

header{
    background-color: #ff6900;
    height: 70px;
    width: 100%;
    color: white;
    display: flex;
    justify-content: center;
    min-width: 1000px;
    position: fixed;
}

header ul>li{
    display: inline;
    padding: .2rem;
}

header ul.width{
    width: 15%;
}

header ul.ul-left{
    padding: 1rem;
    text-align: center;
}

header ul.ul-right{
    padding: 1rem;
    text-align: end;
}

header div.boolean-logo{
    width: 40%;
    height: 50%;
    text-align: center;
    padding-top: 1rem;
}

div.boolean-logo img{
    height: 100%;
}

/* css MAIN */

main{
    padding-top: 70px;
}

.p-relative{
    position: relative;
}

.p-absolute{
    position: absolute;
}

.white{
    color: white;
}

.block{
    display: block;
}

section.row-products{
    margin: 3rem;
    text-align: center;
    min-width: 1000px;
}

div.article img{
    width: 100%;
}

section.row-products div.article{
    width: 300px;
    display: inline-block;
    margin: 0 .8rem 1rem 0;
}

div.article div.heart-container{
    width: 40px;
    height: 40px;
    background-color: white;
    text-align: center;
    top: 3%;
    right: 0;
}

div.heart-container span{
    font-size: 2rem;
}

div.article span.discount{
    background-color: red;
    bottom: 10%;
    left: 0;
    height: 1rem;
    width: 2.5rem;
    font-size: .6rem;
    padding-top: .2rem;
}

div.article span.sustainable{
    background-color: #008000;
    bottom: 10%;
    left: 14%;
    height: 1rem;
    width: 4.5rem;
    font-size: .6rem;
    padding-top: .2rem;
}

div.article span.sustainable-esprite{
    bottom: 10%;
    left: 0;
}

div.article-info{
    top: 100%;
    left: 0;
    text-align: left;
    font-size: .65rem;   
}

div.article-info span.brand{
    color: grey;
    
}

div.article-info span.type{
    text-transform: uppercase;
}

div.article-info span.price{
    color: red;
}

div.article-info span.line-through{
    text-decoration: line-through;
    display: inline;
}


/* css FOOTER */

footer{
    background-color: #1a1a1a;
    color: white;
    height: 100px;
}

footer div.info{
    height: 100px; 
    width: 100px;
    background-color: cyan;
    left: 15%;
}

footer div.find-us{
    height: 100px; 
    width: 100px;
    background-color: red;
    right: 15%;
}

